--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "express": "^5.1.0"
   }
 }
