--- a/package.json
+++ b/package.json
@@ -16,10 +16,26 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "npm run db/migrate:prod && npm run db/generate && node index.js",
+    "db/generate": "npx prisma generate",
+    "db/migrate:dev": "npx prisma migrate dev",
+    "db/migrate:prod": "npx prisma migrate deploy",
+    "build": "cd client && npm install && npm run build",
+    "dev": "cd client && npm install && npm run dev"
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "chalk": "^4.1.2",
-    "express": "^5.1.0"
+    "dkim": "^0.8.0",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
+    "luxon": "^3.7.1",
+    "mailparser": "^3.7.4",
+    "simple-mail-smtp": "^1.0.5",
+    "smtp-server": "^3.14.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
