--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "chalk": "^4.1.2",
+    "crypto": "^1.0.1",
     "dkim": "^0.8.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
