Remove hosted domain (too expensive :/)

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL="file:./mailbox.db"
 PROXY_TRUST=1 # trusting one hop (cloudflare proxying)
 VERIFY_DKIM=true
-DOMAIN_CHECK="echo.brian.icu"
+# DOMAIN_CHECK="example.org"
